--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -8,10 +8,21 @@ on:
 
 jobs:
   build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: ["ubuntu-latest", "windows-latest", "macos-latest"]
+        python-version: ["3.10", "3.11", "3.12"]
 
-    runs-on: ubuntu-latest
-
+      
     steps:
+    - uses: actions/checkout@v5
+    - uses: astral-sh/setup-uv@v7
+      with:
+        python-version: 3.12
+        enable-cache: true
+
     - name: Checkout
       uses: actions/checkout@v5
 
