--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi==0.115.6",
     "gdown>=5.2.0",
+    "hydra-core>=1.3.2",
     "matplotlib>=3.10.8",
     "path>=17.1.1",
     "scikit-learn>=1.8.0",
