--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,12 +18,14 @@ classifiers = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "dvc-gs>=3.0.2",
     "fastapi==0.115.6",
     "gdown>=5.2.0",
     "hydra-core>=1.3.2",
     "kaggle>=1.8.3",
     "matplotlib>=3.10.8",
     "path>=17.1.1",
+    "pathspec<0.12.0",
     "scikit-learn>=1.8.0",
     "torch==2.6.0",
     "typer==0.15.1",
