--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "path>=17.1.1",
     "scikit-learn>=1.8.0",
     "torch==2.6.0",
+    "torch-tb-profiler>=0.4.3",
     "typer==0.15.1",
     "uvicorn==0.34.0",
 ]
@@ -40,6 +41,8 @@ dev = [
     "pytest==8.3.4",
     "ruff==0.1.3",
     "mkdocstrings-python==1.12.2",
+    "snakeviz>=2.2.0",
+    "tensorboard>=2.15.0",
 ]
 
 
