--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,13 +22,16 @@ dependencies = [
     "gdown>=5.2.0",
     "hydra-core>=1.3.2",
     "kaggle>=1.8.3",
+    "loguru>=0.7.2",
     "matplotlib>=3.10.8",
     "path>=17.1.1",
+    "python-dotenv>=1.0.0",
     "scikit-learn>=1.8.0",
     "torch==2.6.0",
     "torch-tb-profiler>=0.4.3",
     "typer==0.15.1",
     "uvicorn==0.34.0",
+    "wandb>=0.16.0",
 ]
 
 [dependency-groups]
