--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,13 @@ cython_debug/
 # Docker guide notes (personal learning material)
 docker_guide.md
 gcloud_guide.md
+config_guide.md
+
+# Training outputs and generated files
+outputs/
+trained_model.pt
+reports/figures/training_statistics.png
+
+# Processed data (generated from raw data)
+data/processed/*.json
+data/processed/*.pt
