--- a/configs/model_conf.yaml
+++ b/configs/model_conf.yaml
@@ -1,29 +1,6 @@
 # Model architecture hyperparameters
 model:
-  conv1:
-    in_channels: 1
-    out_channels: 32
-    kernel_size: 3
-    stride: 1
-  
-  conv2:
-    in_channels: 32
-    out_channels: 64
-    kernel_size: 3
-    stride: 1
-  
-  conv3:
-    in_channels: 64
-    out_channels: 128
-    kernel_size: 3
-    stride: 1
-  
-  dropout: 0.5
-  
-  fc1:
-    in_features: 128
-    out_features: 10
-  
-  max_pool:
-    kernel_size: 2
-    stride: 2
+  num_labels: 5
+  model_name: distilbert-base-uncased
+  dropout: 0.1
+  freeze_encoder: false
