--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,9 @@ dependencies = [
     "matplotlib>=3.10.8",
     "path>=17.1.1",
     "scikit-learn>=1.8.0",
+    "snakeviz>=2.2.2",
     "torch==2.6.0",
+    "transformers>=4.40.0",
     "typer==0.15.1",
     "uvicorn==0.34.0",
 ]
