Refactor tests and improve coverage for MyAwesomeModel and data processing functions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,4 +69,5 @@ explicit = true
 line-length = 120
 
 [tool.coverage.run]
-omit = ["tests/*"]
+source = ["src"]
+omit = ["tests/*", "*/__pycache__/*", "*/site-packages/*"]
