--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -48,8 +48,8 @@ jobs:
       matrix:
         os: ["ubuntu-latest", "windows-latest", "macos-latest"]
         python-version: ["3.12", "3.13"]
-        torch-version: ["2.5.0", "2.6.0"]
-        # Note: Add "2.7.0" when it becomes available
+        torch-version: ["2.6.0"]
+        # Note: PyTorch 2.5.0 is no longer available, using 2.6.0
 
     steps:
       - name: Checkout
