Add cloud training setup and fix data preprocessing
- Add comprehensive cloud training guides (GCP, AWS, general)
- Add GCP-specific training scripts and configurations
- Fix data preprocessing: use 'category' and 'summary' columns (was 'categories' and 'abstract')
- Update model config: set num_labels to 138 to match actual dataset categories
- Add WandB Launch configurations for cloud training
- Add automated GCP training script

--- a/configs/model_conf.yaml
+++ b/configs/model_conf.yaml
@@ -1,6 +1,6 @@
 # Model architecture hyperparameters
 model:
-  num_labels: 5
+  num_labels: 138  # Updated to match actual number of categories in dataset
   model_name: distilbert-base-uncased
   dropout: 0.1
   freeze_encoder: false
