Update coverage configuration to include source directory and refine omit patterns

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,4 +79,5 @@ profile = "black"
 line_length = 120
 
 [tool.coverage.run]
-omit = ["tests/*"]
+source = ["src"]
+omit = ["tests/*", "*/__pycache__/*", "*/site-packages/*"]
