Refactor test assertions for improved readability and update PyTorch version to 2.9.0
- Updated assertions in `test_training.py` to use multi-line formatting for better readability.
- Changed PyTorch dependency version from 2.6.0 to 2.9.0 in `uv.lock` and adjusted related markers.
- Updated `sympy` version from 1.13.1 to 1.14.0 in `uv.lock`.

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -1,6 +1,6 @@
 version: 2
 updates:
-  - package-ecosystem: "uv"
-    directory: "/pyproject.toml"
+  - package-ecosystem: "pip"
+    directory: "/"
     schedule:
       interval: "weekly"
