Add post-update hook to dependabot configuration for improved package management

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -4,3 +4,6 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    post-update-hook:
+      command: "shell"
+      args: ["run", "uv", "lock"]
