--- a/.dvc/config
+++ b/.dvc/config
@@ -1,5 +1,8 @@
 [core]
-    remote = storage
+    remote = remote_storage
 ['remote "storage"']
     url = gs://mlops_project_data_bucket1
+    version_aware = true
+['remote "remote_storage"']
+    url = gs://mlops_project_data_bucket1/
     version_aware = true
