--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi==0.115.6",
     "gdown>=5.2.0",
+    "google-cloud-storage>=2.10.0",
     "hydra-core>=1.3.2",
     "kaggle>=1.8.3",
     "loguru>=0.7.2",
