Freeze encoder to reduce trainable parameters from 66M to ~138k
- Set freeze_encoder: true in model_conf.yaml
- Only classifier head will be trained, encoder uses pretrained weights
- Significantly reduces training time and memory usage
- Suitable for pipeline testing with reasonable model performance

--- a/configs/model_conf.yaml
+++ b/configs/model_conf.yaml
@@ -3,4 +3,4 @@ model:
   num_labels: 138  # Updated to match actual number of categories in dataset
   model_name: distilbert-base-uncased
   dropout: 0.1
-  freeze_encoder: false
+  freeze_encoder: true
