Fix training config merging and add fast training experiment
- Fix OmegaConf struct mode issue when merging experiment configs
- Add reproducible data subsetting with seeded generator
- Add runtime limit checks during training (every 100 iterations)
- Add fast.yaml experiment config for faster training runs
- Add Vertex AI configs for fast training (GPU and CPU variants)
- Add Cloud Build configs for automated job submission with Secret Manager
- Update dependencies (google-cloud-secret-manager, requests)
- Improve error handling and logging for config merging

--- a/configs/training_conf.yaml
+++ b/configs/training_conf.yaml
@@ -2,9 +2,10 @@
 training:
   seed: 42  # Random seed for reproducibility
 
-  batch_size: 32
+  batch_size: 64  # Increased from 32 for better GPU utilization
   epochs: 10
   max_length: 512  # Maximum sequence length for tokenization
+  num_workers: 4  # Parallel data loading workers
 
   optimizer:
     _target_: torch.optim.Adam
