--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi==0.115.6",
     "gdown>=5.2.0",
+    "google-cloud-secret-manager>=2.20.0",
     "hydra-core>=1.3.2",
     "kaggle>=1.8.3",
     "loguru>=0.7.2",
@@ -27,13 +28,14 @@ dependencies = [
     "path>=17.1.1",
     "python-dotenv>=1.0.0",
     "pathspec<0.12.0",
+    "requests>=2.32.0",
     "scikit-learn>=1.8.0",
     "snakeviz>=2.2.2",
     "torch==2.9.0",
     "torch-tb-profiler>=0.4.3",
     "transformers>=4.40.0",
     "typer==0.15.1",
-    "uvicorn==0.34.0",
+    "uvicorn[standard]==0.34.0",
     "wandb>=0.16.0",
 ]
 
