Add TF-IDF + XGBoost model with optimized training pipeline
- Add TF-IDF + XGBoost model (model_tfidf.py, train_tfidf.py)
- Optimize hyperparameters for accuracy (15k features, bigrams, early stopping)
- Fix XGBoost early_stopping_rounds API (set in constructor, not fit())
- Add training_conf_tfidf.yaml to avoid 200-sample limit
- Update API (app/main.py) to support both PyTorch and TF-IDF models
- Add automatic model loading on API startup
- Add class names to prediction response
- Fix ngram_range tuple conversion for sklearn compatibility
- Update Vertex AI config for TF-IDF (e2-highmem-4, memory optimizations)
- Add deploy_and_stream invoke task for streamlined workflow
- Consolidate API files (remove duplicate src/pname/api.py)
- Add comprehensive documentation and pre-flight checks
- Update invoke commands to use uv run prefix

--- a/.dvcignore
+++ b/.dvcignore
@@ -1,3 +1,36 @@
-# Add patterns of files dvc should ignore, which could improve
-# the performance. Learn more at
-# https://dvc.org/doc/user-guide/dvcignore
+# DVC ignore file - patterns to exclude from DVC tracking
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
+.venv/
+venv/
+.env
+.env.local
+*.log
+.pytest_cache/
+.coverage
+htmlcov/
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.DS_Store
+*.swp
+*.swo
+*~
+.idea/
+.vscode/
+*.pt
+*.pth
+*.ckpt
+outputs/
+reports/figures/
+wandb/
+artifacts/
+.cache/
