--- a/configs/vertex_ai/vertex_ai_config_fast.yaml
+++ b/configs/vertex_ai/vertex_ai_config_fast.yaml
@@ -1,7 +1,17 @@
 # Ultra-fast training: 50 steps, 200 samples, ~1 minute expected on GPU
 # Timeout set to 15 minutes for safety
+#
+# ⚠️ CRITICAL: Docker image MUST be built for linux/amd64 platform
+# Run ./scripts/preflight_check.sh before submitting to ensure correct platform
+# This ensures platform (linux/amd64), permissions, image region, and configs are correct.
 scheduling:
   timeout: "900s"  # 15 minutes (900 seconds) - more than enough for ultra-fast training
+
+# Base output directory - CRITICAL: This sets AIP_MODEL_DIR environment variable
+# Model will be saved to: gs://mlops_project_data_bucket1-europe-west1/experiments/fast/trained_model.pt
+# Vertex AI automatically sets AIP_MODEL_DIR to point to this location
+baseOutputDirectory:
+  outputUriPrefix: gs://mlops_project_data_bucket1-europe-west1/experiments/fast
 
 workerPoolSpecs:
   - machineSpec:
