--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,22 +21,27 @@ dependencies = [
     "fastapi==0.115.6",
     "gdown>=5.2.0",
     "google-cloud-secret-manager>=2.20.0",
+    "google-cloud-storage>=2.18.0",
     "hydra-core>=1.3.2",
     "kaggle>=1.8.3",
     "loguru>=0.7.2",
     "matplotlib>=3.10.8",
     "path>=17.1.1",
     "python-dotenv>=1.0.0",
+    "python-multipart>=0.0.6",
     "pathspec<0.12.0",
     "requests>=2.32.0",
     "scikit-learn>=1.8.0",
     "snakeviz>=2.2.2",
+    "pillow>=10.0.0",
     "torch==2.9.0",
     "torch-tb-profiler>=0.4.3",
     "transformers>=4.40.0",
     "typer==0.15.1",
     "uvicorn[standard]==0.34.0",
     "wandb>=0.16.0",
+    "scikit-learn>=1.8.0",  # Already included, but explicit for TF-IDF
+    "xgboost>=2.0.0",  # XGBoost for gradient boosting
 ]
 
 [dependency-groups]
