--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,8 +48,10 @@ dependencies = [
 dev = [
     "black==24.10.0",
     "coverage==7.6.9",
+    "httpx>=0.27.0",
     "invoke==2.2.0",
     "isort==5.13.2",
+    "locust>=2.20.0",
     "mkdocs-material==9.4.6",
     "mkdocs==1.6.1",
     "pre-commit==4.1.0",
