--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -107,4 +107,4 @@ jobs:
         uses: google-github-actions/setup-gcloud@v2
 
       - name: Submit build
-        run: gcloud builds submit . --config cloudbuild.yaml --substitutions=_IMAGE_NAME=train:latest
+        run: gcloud builds submit . --config ci/cloudbuild.yaml --substitutions=_IMAGE_NAME=train:latest
