--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,9 @@ monitoring/current_data.parquet
 monitoring/drift_report.html
 monitoring/drift_results.json
 monitoring/api_requests.csv
+
+# Generated reports and summaries
+reports/deployment_summary.json
+reports/test_summary.json
+deployment_summary.json
+test_summary.json
