--- a/.github/workflows/cml_data.yaml
+++ b/.github/workflows/cml_data.yaml
@@ -33,10 +33,18 @@ jobs:
         uses: iterative/setup-dvc@v2
         continue-on-error: true
 
-      - name: Pull data with DVC (optional)
-        continue-on-error: true
+      - name: Pull data with DVC
+        id: dvc-pull
         run: |
-          dvc pull || echo "DVC pull skipped (data may not be available in CI)"
+          if ! dvc pull; then
+            echo "❌ DVC pull failed. This may indicate data accessibility issues."
+            echo "Check that:"
+            echo "  1. GCS bucket is accessible: gs://mlops_project_data_bucket1/"
+            echo "  2. Service account has Storage Object Viewer permissions"
+            echo "  3. DVC remote is configured: dvc remote list"
+            exit 1
+          fi
+          echo "✅ DVC pull succeeded"
 
       - name: Compute dataset statistics
         id: stats
