--- a/monitoring_service/Dockerfile
+++ b/monitoring_service/Dockerfile
@@ -1,5 +1,5 @@
-# Base image with Python and uv pre-installed
-# CRITICAL: For GCP deployment, build with: docker buildx build --platform linux/amd64 ...
+# Dockerfile for Drift Detection API Service
+
 FROM ghcr.io/astral-sh/uv:python3.12-bookworm-slim
 
 # Install build essentials
@@ -12,23 +12,23 @@ COPY uv.lock uv.lock
 COPY pyproject.toml pyproject.toml
 COPY README.md README.md
 COPY src/ src/
-COPY app/ app/
+COPY monitoring/ monitoring/
+COPY monitoring_service/ monitoring_service/
 COPY configs/ configs/
-# Note: data/ is not copied - it should be mounted if needed
 
 # Set working directory
 WORKDIR /
 
-# Install dependencies with cache mount for faster rebuilds
+# Install dependencies
 ENV UV_LINK_MODE=copy
 RUN --mount=type=cache,target=/root/.cache/uv uv sync --frozen --no-cache --no-install-project
 
 # Expose port for API
-EXPOSE 8000
+EXPOSE 8001
 
-# Health check for API container
+# Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8000/health || exit 1
+    CMD curl -f http://localhost:8001/health || exit 1
 
-# Entrypoint for API server
-ENTRYPOINT ["uv", "run", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Entrypoint for drift detection API
+ENTRYPOINT ["uv", "run", "uvicorn", "monitoring_service.app.main:app", "--host", "0.0.0.0", "--port", "8001"]
