--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+            args: ['--maxkb=600']
       - id: check-json
       - id: check-toml
       - id: check-merge-conflict
