minor bug fixes

--- a/configs/training_conf_tfidf.yaml
+++ b/configs/training_conf_tfidf.yaml
@@ -4,3 +4,4 @@ training:
   seed: 42  # Random seed for reproducibility
   max_samples: null  # Use full dataset by default (can be overridden by experiment config)
   figure_save_path: "reports/figures/confusion_matrix_tfidf.png"
+  epochs: null  # For compatibility - maps to model.n_estimators if set
