--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ dependencies = [
     "pyarrow>=10.0.0",  # For parquet support
     "dvc>=3.66.1",
     "dvc-gs>=3.0.0",  # DVC plugin for Google Cloud Storage support
+    "dotenv>=0.9.9",
 ]
 
 [dependency-groups]
