fixed the error in the report so no the report.py runs without errors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ dependencies = [
     "pandas>=2.0.0",  # Required by Evidently
     "pyarrow>=10.0.0",  # For parquet support
     "dvc>=3.66.1",
+    "markdown>=3.10",
 ]
 
 [dependency-groups]
